force-app/main/default/objects/Int_OLMN_Payment_Confirmation__c/Int_OLMN_Payment_Confirmation__c.object-meta.xml
<CustomObject>
    <description>This contains interface payment information coming from newco oracle</description>
    <label>Int OLMN AP Payment Confirmation</label>
    <nameField>
        <displayFormat>PC-{00000000}</displayFormat>
        <label>Int OLMN AP Payment Confirmation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int OLMN Payment Confirmation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>