force-app/main/default/objects/Int_OLMN_Payment_Confirmation__c/fields/Credit_Notificaiton_Email__c.field-meta.xml
<CustomField>
    <fullName>Credit_Notificaiton_Email__c</fullName>
    <label>Credit Notificaiton Email</label>
    <type>Email</type>
</CustomField>