force-app/main/default/objects/Int_OLMN_Payment_Confirmation__c/fields/LS_Contract__c.field-meta.xml
<CustomField>
    <fullName>LS_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LS Contract</label>
    <referenceTo>cllease__Lease_Account__c</referenceTo>
    <relationshipLabel>Int OLMN Payment Confirmation</relationshipLabel>
    <relationshipName>Int_OLMN_Payment_Confirmation</relationshipName>
    <type>Lookup</type>
</CustomField>